Fixerd overlapping images when using Row of Illustrations.

--- a/public/stylesheets/exhibits.css
+++ b/public/stylesheets/exhibits.css
@@ -50,8 +50,11 @@ color:black;
 	margin-top: 20px;
 	padding-top: 1em;
 	padding-bottom: .2em;
+	clear: both;
 }
 
 .exhibit_footer a {
 color: white;
 }
+
+.clearboth { clear: both; }
